--- a/auto-generated-widget.html
+++ b/auto-generated-widget.html
@@ -230,12 +230,12 @@ cpdefine("inline:com-chilipeppr-widget-grbl", ["chilipeppr_ready", "jquerycookie
             chilipeppr.subscribe("/com-chilipeppr-widget-serialport/recvSingleSelectPort", this, function(port){
                 if(port !== null){
                    this.buffer_name = port.BufferAlgorithm;
-                    if(this.buffer_name !== "grbl"){
-                       $("#grbl-buffer-warning").show();
-                    }
-                    else{
-                       $("#grbl-buffer-warning").hide();
-                    }
+//                     if(this.buffer_name !== "grbl"){
+//                        $("#grbl-buffer-warning").show();
+//                     }
+//                     else{
+//                        $("#grbl-buffer-warning").hide();
+//                     }
                 }
             });
             
